--- a/lms/templates/auth/base.html
+++ b/lms/templates/auth/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Auth{% endblock%} | Unicross(lms)</title>
+    <title>{% block title %}Auth{% endblock%} | LMS Unicross</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo.png')}}" type="image/x-icon">
