--- a/lms/templates/auth/admin-sign-in.html
+++ b/lms/templates/auth/admin-sign-in.html
@@ -12,9 +12,12 @@
                     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                     <label for="floatingInput">Email address</label>
         </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <div class="form-floating" id="form-floating">
+            <input type="password" class="form-control f" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Password</label>
+            <div class="eye-slash">
+                <a href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+            </div>
         </div>
         <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
@@ -38,3 +41,21 @@
     </div>
 </section>
 {% endblock %}
+
+<!-- <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <form>
+    <div class="form-group">
+      <label>Password</label>
+      <div class="input-group" id="show_hide_password">
+        <input class="form-control" type="password">
+        <div class="input-group-addon">
+          <a href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </div>
+  </form>
+      </div>
+    </div>
+  </div> -->
