--- a/lms/templates/auth/student-sign-in.html
+++ b/lms/templates/auth/student-sign-in.html
@@ -1,5 +1,5 @@
-{% extends 'auth/base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}Auth{% endblock%}
 {% block content %}
 <section class="auth">    
     <div class="container">
