ref: worked on logout route for all access

--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -2,5 +2,5 @@
 {% block title %}Librarian Dashboard{% endblock%}
 
 {% block content %}
-    
+<a href="{{ url_for('auth.logout_librarian') }}">logout</a> 
 {% endblock %}
