--- a/lms/templates/student/dashboard.html
+++ b/lms/templates/student/dashboard.html
@@ -2,5 +2,7 @@
 {% block title %}Student Dashboard{% endblock%}
 
 {% block content %}
-<a href="{{ url_for('auth.logout_student') }}">logout</a> 
+
 {% endblock %}
+
+<!-- <a href="{{ url_for('auth.logout_student') }}">logout</a> -->
