--- a/lms/templates/base.html
+++ b/lms/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="{{ url_for('admin.static', filename='images/logo.png')}}" type="image/x-icon">
 
     <!--css -->
-    <!-- <link rel="stylesheet" href="{{ url_for('admin.static', filename='css/auth.css') }}"> -->
+    <link rel="stylesheet" href="{{ url_for('admin.static', filename='css/auth.css') }}">
 
     <!-- external css -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
