--- a/lms/templates/admin/base.html
+++ b/lms/templates/admin/base.html
@@ -128,12 +128,12 @@
                         <div id="navProfile" class="collapse " data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link " href="admin-instructor.html">
+                                    <a class="nav-link " href="{{ url_for('librarian.author')}}">
                                         All Authors
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link " href="admin-students.html">Add Author</a>
+                                    <a class="nav-link " href="{{ url_for('librarian.add_author')}}">Add Author</a>
                                 </li>
                             </ul>
                         </div>
