--- a/lms/templates/librarian/edit_author.html
+++ b/lms/templates/librarian/edit_author.html
@@ -1,5 +1,5 @@
 {% extends 'admin/base.html' %}
-{% block title %}Add Author{% endblock%}
+{% block title %}Edit Author{% endblock%}
 {% block content %}
 <section class="container-fluid p-4">
     <div class="row ">
@@ -7,7 +7,7 @@
             <!-- Page header -->
             <div class="border-bottom pb-3 mb-3 ">
                 <div class="mb-2 mb-lg-0">
-                    <h1 class="mb-0 h2 fw-bold"> Add Author </h1>
+                    <h1 class="mb-0 h2 fw-bold"> Edit Author </h1>
                     <!-- Breadcrumb -->
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
@@ -18,7 +18,7 @@
                                 <a href="#">Author</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
-                                Add Author
+                                Edit Author
                             </li>
                         </ol>
                     </nav>
@@ -29,7 +29,7 @@
     <div class="row ">
         <div class="offset-xl-3 col-xl-6 col-12">
             <!-- card -->
-            <form action="{{ url_for('librarian.add_author') }}" method="post">
+            <form action="{{ url_for('librarian.edit_author', author_id=id) }}" method="post">
                 {{ form.hidden_tag() }}                    
                 <div class="card mb-4">
                     <!-- card body -->
