--- a/lms/templates/admin/base.html
+++ b/lms/templates/admin/base.html
@@ -102,12 +102,12 @@
                         <div id="navCourses" class="collapse " data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link " href="admin-course-overview.html">
+                                    <a class="nav-link " href="{{ url_for('librarian.books')}}">
                                         All Books
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link " href="admin-course-category.html">
+                                    <a class="nav-link " href="{{ url_for('librarian.category')}}">
                                         All Books Category
                                     </a>
                                 </li>
