--- a/lms/templates/librarian/category.html
+++ b/lms/templates/librarian/category.html
@@ -1,5 +1,5 @@
 {% extends 'admin/base.html' %}
-{% block title %}Authors{% endblock%}
+{% block title %}Book Category{% endblock%}
 {% block content %}
 <section class="container-fluid p-4">
     <div class="row ">
@@ -7,7 +7,7 @@
             <!-- Page header -->
             <div class="border-bottom pb-3 mb-3 d-md-flex align-items-center justify-content-between">
                 <div class="mb-2 mb-lg-0">
-                    <h1 class="mb-0 h2 fw-bold">Authors </h1>
+                    <h1 class="mb-0 h2 fw-bold">Book Category </h1>
                     <!-- Breadcrumb -->
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
@@ -15,14 +15,14 @@
                                 <a href="{{ url_for('librarian.dashboard')}}">Dashboard</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
-                                Authors
+                                Book Category
                             </li>
                         </ol>
                     </nav>
                 </div>
                 <!-- button -->
                 <div>
-                    <a href="{{ url_for('librarian.add_author')}}" class="btn btn-primary me-2">Add Authors</a>
+                    <a href="{{ url_for('librarian.add_category')}}" class="btn btn-primary me-2">Add Book Category</a>
                 </div>
             </div>
 
@@ -43,12 +43,12 @@
                 </div>
                 <div class="p-4 row">
                     <!-- Form -->
-                    <form action="{{ url_for('librarian.search_author') }}" method="post" class="d-flex align-items-center col-12 col-md-8 col-lg-3">
+                    <form action="{{ url_for('librarian.search_category') }}" method="post" class="d-flex align-items-center col-12 col-md-8 col-lg-3">
                         {{ form.hidden_tag() }}                    
                         <span class="position-absolute ps-3 search-icon">
                             <i class="fe fe-search"></i>
                         </span>
-                        {{ form.query(class="form-control ps-6", placeholder="Filter Author by name")}}
+                        {{ form.query(class="form-control ps-6", placeholder="Filter Book Category by name")}}
                         {% if form.query.errors %}
                         <ul class="errors">
                         {% for error in form.query.errors %}
@@ -75,14 +75,14 @@
                                                     <label class="form-check-label" for="checkAll"></label>
                                                 </div>
                                             </th>
-                                            <th>Author</th>
+                                            <th>Book Category</th>
                                             <th></th>
                                             <th></th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for author in author.items %}
+                                        {% for category in category.items %}
                                         <!-- Modal -->
                                         <div class="modal fade" id="exampleModal" tabindex="-1"
                                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -95,13 +95,13 @@
                                                             aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        Are you sure you want to delete this Author profile?
+                                                        Are you sure you want to delete this Book Category?
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary"
                                                             data-bs-dismiss="modal">Close</button>
                                                         <a class="btn btn-primary"
-                                                            href="{{ url_for('librarian.remove_author', author_id=author.id) }}">Delete</a>
+                                                            href="{{ url_for('librarian.remove_category', category_id=category.id) }}">Delete</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -123,7 +123,7 @@
                                                         </div>
                                                         <div class="ms-3">
                                                             <h5 class="mb-0 text-primary-hover">
-                                                                {{author.name}}
+                                                                {{category.name}}
                                                             </h5>
                                                         </div>
                                                     </div>
@@ -144,7 +144,7 @@
                                                         style="">
                                                         <span class="dropdown-header">Settings</span>
                                                         <a class="dropdown-item"
-                                                            href="{{ url_for('librarian.edit_author', author_id=author.id) }}"><i
+                                                            href="{{ url_for('librarian.edit_category', category_id=category.id) }}"><i
                                                                 class="fe fe-edit dropdown-item-icon"></i>Edit</a>
                                                         <button type="button" class="dropdown-item"
                                                             data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -168,21 +168,21 @@
                 <!-- Card Footer -->
                 <div class="card-footer d-md-flex justify-content-between align-items-center">
                     <div>
-                        <span>Showing authors {{author.first}} to {{author.last}} of {{author.total}}</span>
+                        <span>Showing categorys {{category.first}} to {{category.last}} of {{category.total}}</span>
                     </div>
                   
                     <nav>
                         <ul class="pagination  mb-0 mt-2">
-                            {% if author.has_prev %}
+                            {% if category.has_prev %}
                             <li class="page-item disabled">
-                                <a class="page-link mx-1 rounded" href="{{ url_for('librarian.author', page=author.prev_num) }}"><i class="mdi mdi-chevron-left"></i></a>
+                                <a class="page-link mx-1 rounded" href="{{ url_for('librarian.category', page=category.prev_num) }}"><i class="mdi mdi-chevron-left"></i></a>
                             </li>
                             {% endif %}
                            
-                            {% for number in author.iter_pages() %}
-                                {% if author.page != number %}                                    
+                            {% for number in category.iter_pages() %}
+                                {% if category.page != number %}                                    
                                     <li class="page-item">
-                                        <a class="page-link mx-1 rounded" href="{{ url_for('librarian.author', page=number) }}">{{ number }}</a>
+                                        <a class="page-link mx-1 rounded" href="{{ url_for('librarian.category', page=number) }}">{{ number }}</a>
                                     </li>
                                 {% else %}
                                     <li class="page-item active">
@@ -191,9 +191,9 @@
                                 {% endif %}
                             {% endfor %}
 
-                            {% if author.has_next %}
+                            {% if category.has_next %}
                             <li class="page-item">
-                                <a class="page-link mx-1 rounded" href="{{ url_for('librarian.author', page=author.next_num) }}"><i class="mdi mdi-chevron-right"></i></a>
+                                <a class="page-link mx-1 rounded" href="{{ url_for('librarian.category', page=category.next_num) }}"><i class="mdi mdi-chevron-right"></i></a>
                             </li>
                             {% endif %}
                         </ul>
