--- a/lms/templates/auth/admin-sign-in.html
+++ b/lms/templates/auth/admin-sign-in.html
@@ -9,12 +9,7 @@
           <!-- Card body -->
           <div class="card-body p-6">
             <div class="mb-4">
-              <a href="../index-2.html"
-                ><img
-                  src="../../assets/images/logo.png"
-                  class="mb-4"
-                  alt="logo-icon"
-              /></a>
+              <a href="../index-2.html"><img src="../../assets/images/logo.png" class="mb-4" alt="logo-icon" /></a>
               <h1 class="mb-1 fw-bold">Admin Login</h1>
             </div>
             <!-- Form -->
@@ -45,9 +40,7 @@
                 {% endif %}
               </div>
               <!-- Checkbox -->
-              <div
-                class="d-lg-flex justify-content-between align-items-center mb-4"
-              >
+              <div class="d-lg-flex justify-content-between align-items-center mb-4">
                 <div class="form-check">
                   {{ form.remember(class="form-check-input", id="rememberme")}}
                   {{ form.remember.label(class="form-check-label"
