--- a/lms/templates/admin/base.html
+++ b/lms/templates/admin/base.html
@@ -52,9 +52,9 @@
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
     {% for category, message in messages %}
-    <div class="alert alert-{{category}} alert-dismissible fade show " role="alert"">
-            {{ message }}
-            <button type=" button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="alert alert-{{category}} alert-dismissible fade show " role="alert">
+        {{ message }}
+        <button type=" button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endfor %}
     {% endif %}
@@ -132,9 +132,6 @@
                                         All Authors
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link " href="{{ url_for('librarian.add_author')}}">Add Author</a>
-                                </li>
                             </ul>
                         </div>
                     </li>
@@ -160,7 +157,7 @@
                         </div>
                     </li>
                 </ul>
-               
+
             </div>
         </nav>
         <!-- Page Content -->
