--- a/lms/templates/auth/admin-sign-in.html
+++ b/lms/templates/auth/admin-sign-in.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block title %}Auth{% endblock%} {% block content %}
+{% extends 'base.html' %} 
+{% block title %}Auth{% endblock%} {% block content %}
 <!-- Page content -->
 <main>
   <section class="container d-flex flex-column">
