--- a/lms/templates/librarian/category.html
+++ b/lms/templates/librarian/category.html
@@ -118,7 +118,7 @@
                                                 <a href="#" class="text-inherit">
                                                     <div class="d-flex align-items-center">
                                                         <div class="ms-3">
-                                                            <h5 class="mb-0 text-primary-hover">
+                                                            <h5 class="mb-0 text-primary-hover txt">
                                                                 {{category.name}}
                                                             </h5>
                                                         </div>
@@ -136,8 +136,7 @@
                                                         data-bs-offset="-20,20" aria-expanded="false">
                                                         <i class="fe fe-more-vertical"></i>
                                                     </a>
-                                                    <span class="dropdown-menu" aria-labelledby="productDropdown1"
-                                                        style="">
+                                                    <span class="dropdown-menu" aria-labelledby="productDropdown1">
                                                         <span class="dropdown-header">Settings</span>
                                                         <a class="dropdown-item"
                                                             href="{{ url_for('librarian.edit_category', category_id=category.id) }}"><i
